# RUST

./: main.rs  rust.md
DEMO/: Cargo.toml
di8/: Cargo.toml
greeting/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
manage/src/: main.rs
meiju/: Cargo.toml
meiju/src/: main.rs
mini-kms/backend/: Cargo.toml
mini-kms/backend/src/: main.rs  state.rs
mini-kms/backend/src/entities/: audit_log.rs  device.rs  keypack.rs  mod.rs  user.rs
mini-kms/backend/src/middleware/: auth.rs
mini-kms/backend/src/routes/: auth.rs  device.rs  keypack.rs  mod.rs  status.rs  user.rs
mini-kms/frontend/: README.md  index.html  script.js  style.css
new/: Cargo.toml
new/src/: main.rs
owner/src/: main.rs
panic/src/: main.rs
pay/: Cargo.toml
pay/src/: main.rs
project/: Cargo.toml
project/src/: front_of_house.rs  lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
test/src/: main.rs
tra/: Cargo.toml
tra/src/: main.rs
var/src/: main.rs
web_calculator/: Cargo.toml
