[package]
name = "web_calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
# 1. 异步运行时 (地基)
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"

# 3. 序列化神器 (负责把 Struct 变成 JSON，把 JSON 变成 Struct)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }