[package]
name = "mini-kms-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.8.8"
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# 序列化/反序列化 (JSON 处理)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 跨域处理 (开发必备)
tower-http = { version = "0.6.8", features = ["cors"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
# 用于读取 .env 配置文件
dotenvy = "0.15"
# 密码哈希
bcrypt = "0.19.0"
# 简单的 JWT 令牌处理
jsonwebtoken = "10.3.0"
chrono ="0.4.44"